# zcodex

./: .cnb.yml  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  Makefile  README.md  announcement_tip.toml  cliff.toml  codex.typescript  config.toml  justfile  merger.sh  mise.toml  npm发布.md  待处理.md  更新.md
.agents/: mcp.json  memory.db  oma-config.yaml
.agents/codex-cli-native-tldr/: architecture.md  deploy-report.md  qa-report.md  tasks.md  tech-review.md
.agents/embedded-zmemory-overhaul/: architecture.md  qa-report.md
.agents/federation-team-mode/: architecture.md  deploy-report.md  prd.md  qa-report.md  tasks.md  tech-review.md  ui-spec.md
.agents/handoffs/: 2026-04-20-135150-ztok-general-content-compression-a3.md  2026-04-20-135320-sync-regressions-and-tui-followup.md  2026-04-28-131253-tui-buddy-rarity-visual-differentiation.md  2026-04-28-131504-tui-startup-buddy-fix.md  2026-04-28-131725-tui-buddy-status-visibility.md
.cnb/: settings.yml
.codex/: config.toml
.github/: dotslash-zsh-config.json  pull_request_template.md
.mission/: mission_state.json
.version/: rtk.toml  sqz.toml
codex-cli/: Dockerfile  README.md  package.json
codex-rs/: Cargo.toml  README.md  default.nix
codex-rs/context-hooks/: Cargo.toml
codex-rs/context-hooks/src/: event_recorder.rs  lib.rs  snapshot.rs
codex-rs/federation-client/: Cargo.toml
codex-rs/federation-client/src/: lib.rs
codex-rs/federation-daemon/: Cargo.toml
codex-rs/federation-daemon/src/: lib.rs  server.rs  store.rs
codex-rs/federation-protocol/: Cargo.toml
codex-rs/federation-protocol/src/: daemon_api.rs  envelope.rs  envelope_id.rs  instance_card.rs  instance_id.rs  lease.rs  lib.rs  state_layout.rs
codex-rs/mission/: Cargo.toml
codex-rs/mission/src/: error.rs  handoff.rs  knowledge.rs  lib.rs  phases.rs  planner.rs  skill_manager.rs  state.rs  validators.rs  worker_manager.rs
codex-rs/mission/src/validators/: scrutiny.rs  user_testing.rs
codex-rs/native-tldr/: BUILD.bazel  Cargo.toml  README.md
codex-rs/native-tldr-daemon/: BUILD.bazel  Cargo.toml
codex-rs/native-tldr-daemon/src/: main.rs
codex-rs/native-tldr/src/: analysis.rs  config.rs  daemon.rs  diagnostics.rs  import_analysis.rs  lib.rs  lifecycle.rs  mcp.rs  project_analysis.rs  rust_analysis.rs  search.rs  semantic.rs  semantic_cache.rs  session.rs  tool_api.rs  wire.rs
codex-rs/native-tldr/src/api/: mod.rs
codex-rs/native-tldr/src/lang_support/: c.rs  cpp.rs  csharp.rs  elixir.rs  go.rs  java.rs  javascript.rs  kotlin.rs  lua.rs  luau.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  swift.rs  typescript.rs  zig.rs
codex-rs/native-tldr/src/semantic/: embedder.rs
codex-rs/rtk/: Cargo.toml
codex-rs/rtk/src/: aws_cmd.rs  cargo_cmd.rs  container.rs  curl_cmd.rs  deps.rs  diff_cmd.rs  env_cmd.rs  filter.rs  find_cmd.rs  format_cmd.rs  gh_cmd.rs  git.rs  go_cmd.rs  golangci_cmd.rs  grep_cmd.rs  gt_cmd.rs  json_cmd.rs  lib.rs  lint_cmd.rs  local_llm.rs  log_cmd.rs  ls.rs  mypy_cmd.rs  next_cmd.rs  npm_cmd.rs  pip_cmd.rs  playwright_cmd.rs  pnpm_cmd.rs  prettier_cmd.rs  prisma_cmd.rs  psql_cmd.rs  pytest_cmd.rs  read.rs  rewrite.rs  ruff_cmd.rs  runner.rs  summary.rs  tee.rs  tracking.rs  tree.rs  (+5 more)
codex-rs/rtk/src/filters/: README.md
codex-rs/rtk/src/parser/: README.md  error.rs  formatter.rs  mod.rs  types.rs
codex-rs/zmemory/: Cargo.toml  README.md
codex-rs/zmemory/src/: config.rs  doctor.rs  lib.rs  path_resolution.rs  repository.rs  schema.rs  service.rs  system_views.rs  tool_api.rs
codex-rs/zmemory/src/compat/: browse.rs  contracts.rs  maintenance.rs  mod.rs  review.rs
codex-rs/zmemory/src/service/: alias.rs  batch.rs  common.rs  contracts.rs  create.rs  delete.rs  export.rs  governance.rs  history.rs  import.rs  index.rs  mod.rs  read.rs  review.rs  search.rs  snapshot.rs  stats.rs  tests.rs  update.rs
codex-rs/ztok/: Cargo.toml
codex-rs/ztok/src/: aws_cmd.rs  behavior.rs  cargo_cmd.rs  compression.rs  compression_json.rs  compression_log.rs  container.rs  curl_cmd.rs  deps.rs  diff_cmd.rs  env_cmd.rs  fetcher_output.rs  filter.rs  find_cmd.rs  format_cmd.rs  gh_cmd.rs  git.rs  go_cmd.rs  golangci_cmd.rs  grep_cmd.rs  gt_cmd.rs  json_cmd.rs  lib.rs  lint_cmd.rs  log_cmd.rs  ls.rs  mypy_cmd.rs  near_dedup.rs  next_cmd.rs  npm_cmd.rs  pip_cmd.rs  playwright_cmd.rs  pnpm_cmd.rs  prettier_cmd.rs  prisma_cmd.rs  psql_cmd.rs  pytest_cmd.rs  read.rs  rewrite.rs  ruff_cmd.rs  (+13 more)
codex-rs/ztok/src/near_dedup/: mod.rs
codex-rs/ztok/src/parser/: README.md  formatter.rs  mod.rs  types.rs
docs/: agents_md.md  claude-api.md  config.md  contributing.md  example-config.md  exec.md  fallback-providers.zh-example.md  fork-advanced-guide-zh.md  fork-docs-index-zh.md  fork-enterprise-guide-zh.md  fork-quickstart-zh.md  fork-usage-guide-zh.md  fork-vs-upstream-codex.md  install.md  mission.md  slash_commands.md  spawn_agent.md  tui-chat-composer.md  zmemory.md  ztldr.md
issues/: 2026-03-30-embedded-zmemory-implementation.toml  2026-03-31-codex-multi-model-agent-orchestration.toml  2026-04-01-codex-cli-rg-ripgreprc-error.toml  2026-04-01-codex-tui-buddy-depth.toml  2026-04-01-codex-tui-pet-feature.toml  2026-04-01-memory-zmemory-decoupling.toml  2026-04-01-zmemory-configurable-runtime-profile.toml  2026-04-01-zmemory-proactive-preference-capture.toml  2026-04-01-zmemory-proactive-write.toml  2026-04-03-rtk-ztok-rename.toml  2026-04-03-tui-buddy-ai-soul-expansion.toml
llmdoc-viewer/: .dev.vars.example  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.toml
plan/: 2026-04-01-memory-zmemory-decoupling.md  2026-04-01-task-be008b4d.md  2026-04-01-zmemory-proactive-preference-capture.md  2026-04-01-zmemory-project-default-path.md  2026-04-03-rtk-ztok-rename.md  2026-04-03-tui-buddy-ai-soul-expansion.md  2026-04-03-zmemory-mcp-tools-alignment.md
scripts/: check-fork-config.py  cnb_upload_codex_release.sh  macos_sign_and_notarize_local.sh  package_windows_cross_builds.sh  setup_macos_signing_secrets.sh  stage_npm_packages.py
(+2166 files in other folders)
