[package]
edition.workspace = true
license.workspace = true
name = "codex-context-hooks"
version.workspace = true

[lib]
doctest = false
name = "codex_context_hooks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
codex-hooks = { workspace = true }
codex-utils-output-truncation = { workspace = true }
codex-zmemory = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
