[package]
edition.workspace = true
license.workspace = true
name = "codex-federation-client"
version.workspace = true

[lib]
name = "codex_federation_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-federation-protocol = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[dev-dependencies]
codex-federation-daemon = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
