[package]
edition.workspace = true
license.workspace = true
name = "codex-federation-daemon"
version.workspace = true

[lib]
name = "codex_federation_daemon"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-federation-protocol = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
