[package]
edition.workspace = true
license.workspace = true
name = "codex-federation-protocol"
version.workspace = true

[lib]
name = "codex_federation_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
