[package]
edition.workspace = true
license.workspace = true
name = "codex-mission"
version.workspace = true

[lib]
doctest = false
name = "codex_mission"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
