[package]
name = "codex-native-tldr-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-native-tldr-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codex-native-tldr = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
