[package]
name = "codex-native-tldr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_native_tldr"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-file-search = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "sync", "time"] }
tree-sitter = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
