[package]
name = "codex-native-tldr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "codex_native_tldr"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-file-search = { workspace = true }
codex-utils-cli = { workspace = true }
fastembed = { workspace = true }
ignore = { workspace = true }
libc = { workspace = true }
md5 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
regex-lite = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
toml = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-java = { workspace = true }
tree-sitter-kotlin-ng = { workspace = true }
tree-sitter-language = { workspace = true }
tree-sitter-lua = { workspace = true }
tree-sitter-luau = { workspace = true }
tree-sitter-php = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-zig = { workspace = true }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
