[package]
name = "codex-rtk"
version = "0.30.0"
edition.workspace = true
license = "MIT"

[lib]
name = "codex_rtk"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chardetng = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
encoding_rs = { workspace = true }
ignore = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
