[package]
name = "codex-zmemory"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "codex_zmemory"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-git-utils = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
